# etl_python

./: Dockerfile  README.md  app.py  pyproject.toml
