[tool.poetry]
name = "etl-python"
version = "0.1.0"
description = ""
authors = ["joaoocker <82133025+joaoocker@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
